minijinja/tests/snapshots/test_compiler__codegen@loop_else.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"seq\": []\n}\n---\n{% for item in seq %}\n  should not happen\n{% else %}\n  else block!\n{% endfor %}"
input_file: minijinja/tests/inputs/loop_else.txt
---
(
    [
        00000 | EmitRaw("{\n  \"seq\": []\n}\n---\n")  [line 1],
        00001 | Lookup("seq")  [line 5],
        00002 | PushLoop(1),
        00003 | Iterate(7),
        00004 | StoreLocal("item"),
        00005 | EmitRaw("\n  should not happen\n"),
        00006 | Jump(3),
        00007 | PushDidNotIterate,
        00008 | PopFrame,
        00009 | JumpIfFalse(11),
        00010 | EmitRaw("\n  else block!\n")  [line 7],
    ],
    {},
)
