minijinja/tests/snapshots/test_compiler__codegen@loop_filter.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"seq\": [\n    1,\n    2,\n    3,\n    4,\n    5,\n    6,\n    7,\n    8,\n    9,\n    10\n  ]\n}\n---\n{%- for item in seq if item is even and loop is undefined %}\n- {{ item }} ({{ loop.index }} / {{ loop.length }})\n{%- endfor %}"
input_file: minijinja/tests/inputs/loop_filter.txt
---
(
    [
        00000 | EmitRaw("{\n  \"seq\": [\n    1,\n    2,\n    3,\n    4,\n    5,\n    6,\n    7,\n    8,\n    9,\n    10\n  ]\n}\n---")  [line 1],
        00001 | BuildList(0)  [line 16],
        00002 | Lookup("seq"),
        00003 | PushLoop(0),
        00004 | Iterate(17),
        00005 | DupTop,
        00006 | StoreLocal("item"),
        00007 | Lookup("item"),
        00008 | PerformTest("even", 1, 0),
        00009 | JumpIfFalseOrPop(12),
        00010 | Lookup("loop"),
        00011 | PerformTest("undefined", 1, 1),
        00012 | JumpIfFalse(15),
        00013 | ListAppend,
        00014 | Jump(16),
        00015 | DiscardTop,
        00016 | Jump(4),
        00017 | PopFrame,
        00018 | PushLoop(1),
        00019 | Iterate(34),
        00020 | StoreLocal("item"),
        00021 | EmitRaw("\n- "),
        00022 | Lookup("item")  [line 17],
        00023 | Emit,
        00024 | EmitRaw(" ("),
        00025 | Lookup("loop"),
        00026 | GetAttr("index"),
        00027 | Emit,
        00028 | EmitRaw(" / "),
        00029 | Lookup("loop"),
        00030 | GetAttr("length"),
        00031 | Emit,
        00032 | EmitRaw(")"),
        00033 | Jump(19),
        00034 | PopFrame,
    ],
    {},
)
