minijinja/tests/snapshots/test_compiler__codegen@loop_recursive.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"nav\": [\n    {\n      \"link\": \"/\",\n      \"title\": \"Index\"\n    },\n    {\n      \"link\": \"/docs\",\n      \"title\": \"Docs\",\n      \"children\": [\n        {\n          \"link\": \"/docs/installation\",\n          \"title\": \"Installation\",\n          \"children\": [\n            {\n              \"link\": \"/docs/installation/quickstart\",\n              \"title\": \"Quickstart\"\n            },\n            {\n              \"link\": \"/docs/installation/advanced\",\n              \"title\": \"Advanced\"\n            }\n          ]\n        },\n        {\n          \"link\": \"/docs/faq\",\n          \"title\": \"FAQ\"\n        }\n      ]\n    }\n  ]\n}\n---\n<ul class=\"nav\">\n{% for item in nav recursive %}\n  <li><a href={{ item.link }}\">{{ item.title }}</a>{%\n    if item.children %}<ul>{{ loop(item.children) }}</ul>{% endif %}</li>\n{% endfor %}\n</ul>\n\n<ul class=\"nav\">\n{% for item in nav recursive %}\n  <li><a href={{ item.link }}\">{{ item.title }}</a>{%\n    if item.children %}<ul>{{ loop(item.children)|upper }}</ul>{% endif %}</li>\n{% endfor %}\n</ul>"
input_file: minijinja/tests/inputs/loop_recursive.txt
---
(
    [
        00000 | EmitRaw("{\n  \"nav\": [\n    {\n      \"link\": \"/\",\n      \"title\": \"Index\"\n    },\n    {\n      \"link\": \"/docs\",\n      \"title\": \"Docs\",\n      \"children\": [\n        {\n          \"link\": \"/docs/installation\",\n          \"title\": \"Installation\",\n          \"children\": [\n            {\n              \"link\": \"/docs/installation/quickstart\",\n              \"title\": \"Quickstart\"\n            },\n            {\n              \"link\": \"/docs/installation/advanced\",\n              \"title\": \"Advanced\"\n            }\n          ]\n        },\n        {\n          \"link\": \"/docs/faq\",\n          \"title\": \"FAQ\"\n        }\n      ]\n    }\n  ]\n}\n---\n<ul class=\"nav\">\n")  [line 1],
        00001 | Lookup("nav")  [line 35],
        00002 | PushLoop(3),
        00003 | Iterate(24),
        00004 | StoreLocal("item"),
        00005 | EmitRaw("\n  <li><a href="),
        00006 | Lookup("item")  [line 36],
        00007 | GetAttr("link"),
        00008 | Emit,
        00009 | EmitRaw("\">"),
        00010 | Lookup("item"),
        00011 | GetAttr("title"),
        00012 | Emit,
        00013 | EmitRaw("</a>"),
        00014 | Lookup("item")  [line 37],
        00015 | GetAttr("children"),
        00016 | JumpIfFalse(22),
        00017 | EmitRaw("<ul>"),
        00018 | Lookup("item"),
        00019 | GetAttr("children"),
        00020 | FastRecurse,
        00021 | EmitRaw("</ul>"),
        00022 | EmitRaw("</li>\n"),
        00023 | Jump(3),
        00024 | PopFrame,
        00025 | EmitRaw("\n</ul>\n\n<ul class=\"nav\">\n")  [line 38],
        00026 | Lookup("nav")  [line 42],
        00027 | PushLoop(3),
        00028 | Iterate(51),
        00029 | StoreLocal("item"),
        00030 | EmitRaw("\n  <li><a href="),
        00031 | Lookup("item")  [line 43],
        00032 | GetAttr("link"),
        00033 | Emit,
        00034 | EmitRaw("\">"),
        00035 | Lookup("item"),
        00036 | GetAttr("title"),
        00037 | Emit,
        00038 | EmitRaw("</a>"),
        00039 | Lookup("item")  [line 44],
        00040 | GetAttr("children"),
        00041 | JumpIfFalse(49),
        00042 | EmitRaw("<ul>"),
        00043 | Lookup("item"),
        00044 | GetAttr("children"),
        00045 | CallFunction("loop", 1),
        00046 | ApplyFilter("upper", 1, 0),
        00047 | Emit,
        00048 | EmitRaw("</ul>"),
        00049 | EmitRaw("</li>\n"),
        00050 | Jump(28),
        00051 | PopFrame,
        00052 | EmitRaw("\n</ul>")  [line 45],
    ],
    {},
)
