minijinja/tests/snapshots/test_compiler__codegen@loop_unpacking.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"seq\": [\n    [\n      \"+\",\n      [\n        1,\n        2\n      ]\n    ],\n    [\n      \"-\",\n      [\n        3,\n        4\n      ]\n    ]\n  ]\n}\n---\n<ul>\n{% for op, (a, b) in seq %}\n  <li>{{ a }} {{ op }} {{ b }} = ?\n{% endfor %}\n</ul>"
input_file: minijinja/tests/inputs/loop_unpacking.txt
---
(
    [
        00000 | EmitRaw("{\n  \"seq\": [\n    [\n      \"+\",\n      [\n        1,\n        2\n      ]\n    ],\n    [\n      \"-\",\n      [\n        3,\n        4\n      ]\n    ]\n  ]\n}\n---\n<ul>\n")  [line 1],
        00001 | Lookup("seq")  [line 21],
        00002 | PushLoop(1),
        00003 | Iterate(20),
        00004 | UnpackList(2),
        00005 | StoreLocal("op"),
        00006 | UnpackList(2),
        00007 | StoreLocal("a"),
        00008 | StoreLocal("b"),
        00009 | EmitRaw("\n  <li>"),
        00010 | Lookup("a")  [line 22],
        00011 | Emit,
        00012 | EmitRaw(" "),
        00013 | Lookup("op"),
        00014 | Emit,
        00015 | EmitRaw(" "),
        00016 | Lookup("b"),
        00017 | Emit,
        00018 | EmitRaw(" = ?\n"),
        00019 | Jump(3),
        00020 | PopFrame,
        00021 | EmitRaw("\n</ul>")  [line 23],
    ],
    {},
)
