minijinja/tests/snapshots/test_compiler__codegen@loop_var.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"seq\": [\n    \"a\",\n    \"b\",\n    \"c\",\n    \"d\"\n  ]\n}\n---\n{% for item in seq %}\n  {{ item }} ({{ loop.index }} of {{ loop.length }})\n    first={{ loop.first }}\n    last={{ loop.last }}\n    revindex={{ loop.revindex }}\n    revindex0={{ loop.revindex0 }}\n    cycle={{ loop.cycle(\"odd\", \"even\") }}\n    previtem={{ loop.previtem }}\n    nextitem={{ loop.nextitem }}\n{% endfor %}"
input_file: minijinja/tests/inputs/loop_var.txt
---
(
    [
        00000 | EmitRaw("{\n  \"seq\": [\n    \"a\",\n    \"b\",\n    \"c\",\n    \"d\"\n  ]\n}\n---\n")  [line 1],
        00001 | Lookup("seq")  [line 10],
        00002 | PushLoop(1),
        00003 | Iterate(48),
        00004 | StoreLocal("item"),
        00005 | EmitRaw("\n  "),
        00006 | Lookup("item")  [line 11],
        00007 | Emit,
        00008 | EmitRaw(" ("),
        00009 | Lookup("loop"),
        00010 | GetAttr("index"),
        00011 | Emit,
        00012 | EmitRaw(" of "),
        00013 | Lookup("loop"),
        00014 | GetAttr("length"),
        00015 | Emit,
        00016 | EmitRaw(")\n    first="),
        00017 | Lookup("loop")  [line 12],
        00018 | GetAttr("first"),
        00019 | Emit,
        00020 | EmitRaw("\n    last="),
        00021 | Lookup("loop")  [line 13],
        00022 | GetAttr("last"),
        00023 | Emit,
        00024 | EmitRaw("\n    revindex="),
        00025 | Lookup("loop")  [line 14],
        00026 | GetAttr("revindex"),
        00027 | Emit,
        00028 | EmitRaw("\n    revindex0="),
        00029 | Lookup("loop")  [line 15],
        00030 | GetAttr("revindex0"),
        00031 | Emit,
        00032 | EmitRaw("\n    cycle="),
        00033 | Lookup("loop")  [line 16],
        00034 | LoadConst("odd"),
        00035 | LoadConst("even"),
        00036 | CallMethod("cycle", 3),
        00037 | Emit,
        00038 | EmitRaw("\n    previtem="),
        00039 | Lookup("loop")  [line 17],
        00040 | GetAttr("previtem"),
        00041 | Emit,
        00042 | EmitRaw("\n    nextitem="),
        00043 | Lookup("loop")  [line 18],
        00044 | GetAttr("nextitem"),
        00045 | Emit,
        00046 | EmitRaw("\n"),
        00047 | Jump(3),
        00048 | PopFrame,
    ],
    {},
)
