minijinja/tests/snapshots/test_compiler__codegen@macro_basic.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% macro add(a, b) %}{{ a }}|{{ b }}{% endmacro -%}\n{{ add(1, 2) }}\n{{ add(a=1, b=2) }}\n{{ add(b=2, a=1) }}\n{{ add(1, b=2) }}\n{{ add.name }}\n{{ add.arguments }}\n{{ add.caller }}\n{{ add }}"
input_file: minijinja/tests/inputs/macro_basic.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | Jump(10)  [line 3],
        00002 | StoreLocal("b"),
        00003 | StoreLocal("a"),
        00004 | Lookup("a"),
        00005 | Emit,
        00006 | EmitRaw("|"),
        00007 | Lookup("b"),
        00008 | Emit,
        00009 | Return,
        00010 | GetClosure,
        00011 | LoadConst(["a", "b"]),
        00012 | BuildMacro("add", 2, 0),
        00013 | StoreLocal("add"),
        00014 | LoadConst(1)  [line 4],
        00015 | LoadConst(2),
        00016 | CallFunction("add", 2),
        00017 | Emit,
        00018 | EmitRaw("\n"),
        00019 | LoadConst({"a": 1, "b": 2})  [line 5],
        00020 | CallFunction("add", 1),
        00021 | Emit,
        00022 | EmitRaw("\n"),
        00023 | LoadConst({"b": 2, "a": 1})  [line 6],
        00024 | CallFunction("add", 1),
        00025 | Emit,
        00026 | EmitRaw("\n"),
        00027 | LoadConst(1)  [line 7],
        00028 | LoadConst({"b": 2}),
        00029 | CallFunction("add", 2),
        00030 | Emit,
        00031 | EmitRaw("\n"),
        00032 | Lookup("add")  [line 8],
        00033 | GetAttr("name"),
        00034 | Emit,
        00035 | EmitRaw("\n"),
        00036 | Lookup("add")  [line 9],
        00037 | GetAttr("arguments"),
        00038 | Emit,
        00039 | EmitRaw("\n"),
        00040 | Lookup("add")  [line 10],
        00041 | GetAttr("caller"),
        00042 | Emit,
        00043 | EmitRaw("\n"),
        00044 | Lookup("add")  [line 11],
        00045 | Emit,
    ],
    {},
)
