minijinja/tests/snapshots/test_compiler__codegen@macro_caller.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% macro render_dialog(title, class='dialog') -%}\n    <div class=\"{{ class }}\">\n        <h2>{{ title }}</h2>\n        <div class=\"contents\">\n            {{ caller() }}\n        </div>\n    </div>\n{%- endmacro %}\n\n{% call render_dialog('Hello World') %}\n    This is a simple dialog rendered by using a macro and\n    a call block.\n{% endcall %}\n\ncaller: {{ render_dialog.caller }}"
input_file: minijinja/tests/inputs/macro_caller.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | Jump(20)  [line 3],
        00002 | DupTop,
        00003 | IsUndefined,
        00004 | JumpIfFalse(7),
        00005 | DiscardTop,
        00006 | LoadConst("dialog"),
        00007 | StoreLocal("class"),
        00008 | StoreLocal("title"),
        00009 | EmitRaw("<div class=\"")  [line 4],
        00010 | Lookup("class"),
        00011 | Emit,
        00012 | EmitRaw("\">\n        <h2>"),
        00013 | Lookup("title")  [line 5],
        00014 | Emit,
        00015 | EmitRaw("</h2>\n        <div class=\"contents\">\n            "),
        00016 | CallFunction("caller", 0)  [line 7],
        00017 | Emit,
        00018 | EmitRaw("\n        </div>\n    </div>"),
        00019 | Return,
        00020 | GetClosure,
        00021 | LoadConst(["title", "class"]),
        00022 | BuildMacro("render_dialog", 2, 2),
        00023 | StoreLocal("render_dialog"),
        00024 | EmitRaw("\n\n")  [line 10],
        00025 | LoadConst("Hello World")  [line 12],
        00026 | LoadConst("caller"),
        00027 | Jump(30),
        00028 | EmitRaw("\n    This is a simple dialog rendered by using a macro and\n    a call block.\n"),
        00029 | Return,
        00030 | GetClosure,
        00031 | LoadConst([]),
        00032 | BuildMacro("caller", 28, 0),
        00033 | BuildKwargs(1),
        00034 | CallFunction("render_dialog", 2),
        00035 | Emit,
        00036 | EmitRaw("\n\ncaller: ")  [line 15],
        00037 | Lookup("render_dialog")  [line 17],
        00038 | GetAttr("caller"),
        00039 | Emit,
    ],
    {},
)
